[project]
name = "minio-python-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backoff>=2.2.1",
    "ipykernel>=6.29.5",
    "minio>=7.2.14",
    "pyspark>=3.5.4",
    "python-dotenv>=1.0.1",
    "ratelimit>=2.2.1",
    "requests>=2.32.3",
    "ruff>=0.9.1",
]
